2007-03-06  Daiki Ueno  <ueno@unixuser.org>

	* mml-smime.el (mml-smime-use): New variable; default to use openssl.
	(mml-smime-function-alist): New variable; add epg as the backend.
	* mml-sec.el (mml-smime-sign): Don't require mml-smime, autoload
	mml-smime- functions instead.
	* mm-view.el: Require smime.

2007-03-05  Didier Verna  <didier@xemacs.org>

	* gnus-topic.el (gnus-topic-hierarchical-parameters): Perform merging
	instead of just inheritance for posting styles.
	* gnus.el (gnus-group-fast-parameter): Fix typo in comment.

2007-02-24  Chris Moore  <dooglus@gmail.com>

	* pgg-pgp5.el (pgg-pgp5-encrypt-region):
	* pgg-pgp.el (pgg-pgp-encrypt-region):
	* pgg-gpg.el (pgg-gpg-encrypt-region):
	Check pgg-encrypt-for-me if no other recipients.

2007-02-24  John Paul Wallington  <jpw@pobox.com>

	* net/tls.el (tls-certtool-program): Fix custom type.

2007-02-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-cite.el (gnus-message-search-citation-line): Use point-at-bol
	and point-at-eol instead of line-(beginning|end)-position.

	* assistant.el (assistant-parse-buffer): Ditto.

	* netrc.el (netrc-parse-services): Ditto.

2007-02-28  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-find-usable-key): New function.
	(mml2015-epg-sign): Use it.
	(mml2015-epg-encrypt): Use it.

2007-02-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-make-in-reply-to): Quote name containing
	non-ASCII characters.  It will make the RFC2047 encoder cause an error
	if there are special characters.  Reported by NAKAJI Hiroyuki
	<nakaji@kankyo-u.ac.jp>.

2007-02-27  Didier Verna  <didier@xemacs.org>

	Include the group parameters as well as the topic ones in the
	inheritance filter process.
	* gnus-topic.el (gnus-topic-hierarchical-parameters): New optional
	argument GROUP-PARAMS-LIST.
	* gnus-topic.el (gnus-group-topic-parameters): Use it.

2007-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-never-echoes-commands)